# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES = tzexcept.cc tzexcept.hh
libcommon_la_CXXFLAGS = -std=c++11
